<resources>
    <string name="app_name">Login App</string>
    <string name="sign_in">Sign In</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or_sign_in_with">or</string>
    <string name="content_facebook_icon">Facebook icon</string>
    <string name="content_google_icon">Google icon</string>
    <string name="content_twitter_icon">Twitter icon</string>
    <string name="hello">Hello!</string>
    <string name="second_activity_label">Second Activity</string>
    <string name="facebook_app_id">771320800704130</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">78b8fc4f3133ac8842bcbb26a47169bd</string>
    <string name="logout">LOGOUT</string>
</resources>